# s2t

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  desktopstt-popup-silent.sh  desktopstt-silent.sh  install_scripts.sh  pyproject.toml  s2t-popup-silent.sh  s2t-silent.sh  s2t.py  s2t_tool.py  speaktype.sh  test_s2t.py  transcribe_existing.py
.github/: dependabot.yml
.github/workflows/: README.md  pre-commit-autoupdate.yml  pre-commit.yml  release.yml  test.yml  tests.yml
desktopstt/: __init__.py  cli.py  config.py  headless_recorder.py  immediate_popup.py  main.py  popup_recorder.py  popup_recorder_qt.py  simple_cli.py  truly_silent.py  utils.py
desktopstt/audio/: __init__.py  recorder.py
desktopstt/backends/: __init__.py  base.py  whisper_api.py
desktopstt/ui/: __init__.py  app_window.py  recording_window.py
docs/: TODO.md  api_reference.md  developer_guide.md  index.md  quick_start.md  user_guide.md
examples/: desktopstt-popup.desktop  pipe_example.sh  popup_transcribe.sh  quick_transcribe.sh  silent_pipe.sh  silent_popup.sh  simple_speech_to_command.sh  speech_to_command.sh  speech_to_notes.sh
s2t/: __init__.py  cli.py  config.py  headless_recorder.py  immediate_popup.py  main.py  popup_recorder.py  truly_silent.py  utils.py
s2t.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
s2t/audio/: __init__.py  recorder.py
s2t/backends/: __init__.py  base.py  whisper_api.py
tests/: conftest.py  test_audio_simple.py  test_backends_simple.py  test_config.py  test_config_internal.py  test_config_simple.py  test_convenience_scripts.py  test_immediate_popup.py  test_main.py  test_notification.py  test_popup_recorder.py  test_record.py  test_transcribe.py  test_truly_silent.py  test_utils.py  test_utils_simple.py  test_vad_config.py  test_vad_simple.py  test_with_dotenv.py
