[project]
name = "desktopstt"
version = "0.1.0"
description = "Desktop application for speech-to-text conversion on Linux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pygobject>=3.42.0",
    "pycairo>=1.20.0",
    "pyaudio>=0.2.13",
    "pyyaml>=6.0",
    "numpy>=1.26.0",
]
license = {text = "MIT"}

[project.scripts]
desktopstt-popup = "desktopstt.popup_recorder:main"
desktopstt-silent = "desktopstt.truly_silent:main"
desktopstt-immediate = "desktopstt.immediate_popup:main"
desktopstt-headless = "desktopstt.headless_recorder:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["desktopstt"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "N", "S", "A"]
ignore = ["ANN", "S101"]

[tool.ruff.lint.per-file-ignores]
"desktopstt/popup_recorder.py" = ["E402", "F821", "E501"]
"desktopstt/truly_silent.py" = ["E402"]
"desktopstt/audio/recorder.py" = ["E722"]
"tests/*" = ["S101"]
