[project]
name = "s2t"
version = "0.1.0"
description = "Desktop application for speech-to-text conversion on Linux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "pytest>=7.0.0",
    "numpy>=1.26.0",
]
license = {text = "MIT"}

[project.optional-dependencies]
gui = [
    "pygobject>=3.42.0",
    "pycairo>=1.20.0",
]
audio = [
    "pyaudio>=0.2.13",
]
full = [
    "pygobject>=3.42.0",
    "pycairo>=1.20.0",
    "pyaudio>=0.2.13",
]

[project.scripts]
s2t-popup = "s2t.popup_recorder:main"
s2t-silent = "s2t.truly_silent:main"
s2t-immediate = "s2t.immediate_popup:main"
s2t-headless = "s2t.headless_recorder:main"

# Define s2t as a UV tool
[project.entry-points."uv.commands"]
s2t = "s2t_tool:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["s2t"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "N", "S", "A"]
ignore = ["ANN", "S101"]

[tool.ruff.lint.per-file-ignores]
"s2t/popup_recorder.py" = ["E402", "F821", "E501"]
"s2t/truly_silent.py" = ["E402"]
"s2t/audio/recorder.py" = ["E722"]
"s2t/headless_recorder.py" = ["E402", "F821"]
"s2t/immediate_popup.py" = ["E402", "S603", "S607"]
"s2t.py" = ["S603", "S607"]
"tests/*" = ["S101", "E402", "S108", "N811"]
