[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["s2t"]

[project]
name = "s2t"
version = "0.1.0"
description = "Speech-to-Text tool using whisper.cpp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywhispercpp>=1.3.0",
    "pyaudio>=0.2.11",
    "setuptools>=61.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
s2t = "s2t:main"
